# cholo-scrapper

./: .gitignore  README.md  cholo-scrapper.ipynb  main.py  pyproject.toml  scrapper.py
