[project]
name = "cholo-scrapper"
version = "0.1.0"
description = "A web scrapper that does nothing but uses local AI using ollama to simulate a snarky cholo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "chromadb>=1.5.8",
    "fastapi>=0.136.0",
    "instructor>=1.15.1",
    "ipykernel>=7.2.0",
    "langchain>=1.2.15",
    "markdown>=3.10.2",
    "ollama>=0.6.1",
    "openai>=2.32.0",
    "smolagents>=1.24.0",
    "uvicorn>=0.44.0",
]
